--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
-<script>
-  function redirectToURL() {
-    // Define the URLs for desktop and mobile
-    var desktopURL = "https://wabi-sabi.rootmud.xyz/?template=15090&data=15091";
-    var mobileURL = "https://wabi-sabi.rootmud.xyz/?template=15102&data=15091";
-
-    // Check if the user's device is mobile
-    if (/Mobi|Android/i.test(navigator.userAgent)) {
-      // Mobile device
-      window.location.href = mobileURL;
-    } else {
-      // Desktop device
-      window.location.href = desktopURL;
-    }
-  }
-
-  redirectToURL(); // Call the function to perform redirection
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mode Selection</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="bg-white p-8 rounded-lg shadow-lg text-center">
+        <h2 class="text-2xl font-bold mb-6">Select Your Mode ദ്ദി(˵ •̀ ᴗ - ˵ ) ✧</h2>
+        <p class="mb-8 text-gray-700">Please choose you side:</p>
+        <div class="space-y-4">
+            <button
+                class="w-full py-3 bg-orange-500 text-white rounded-md hover:bg-orange-600 transition duration-300"
+                onclick="window.location.href='https://eth.dimension-life.rootmud.xyz'">
+                I'm Using MetaMask!
+            </button>
+            <button
+                class="w-full py-3 bg-green-500 text-white rounded-md hover:bg-green-600 transition duration-300"
+                onclick="window.location.href='https://ar.dimension-life.rootmud.xyz'">
+                I'm Using ArConnect!
+            </button>
+        </div>
+    </div>
+</body>
+</html>
